--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   "flask-dev": "pip3 install -r requirements.txt && python3 -m flask --app src/pages/api/index.py run -p 5328",
+    "flask-dev": "pip3 install -r requirements.txt && python3 -m flask --app src/pages/api/index.py run -p 5328",
     "next-dev": "next dev",
     "dev": "concurrently \"npm run next-dev\" \"npm run flask-dev\"",
     "build": "next build",
@@ -11,12 +11,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.48.0",
     "@types/uuid": "^10.0.0",
+    "concurrently": "^8.1.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-drag-drop-files": "^2.3.10",
-    "concurrently": "^8.1.0",
     "react-icons": "^5.2.1",
     "uuid": "^10.0.0",
     "zustand": "^4.5.4"
